# manof

./: CONTRIBUTING.md  LICENSE  README.md
ai/: requirements.txt
docs/: architecture.md
program/: Cargo.toml
program/src/: lib.rs
