[package]
name = "Manof"
version = "0.1.0"
edition = "2021"
description = "AI Agent Framework for Solana Smart Contracts"
authors = ["Manof Team"]
 
[lib]
crate-type = ["cdylib", "lib"]
name = "Manof"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.16"
anchor-lang = "0.28.0"
borsh = "0.10.3"
thiserror = "1.0.40"
bytemuck = { version = "1.13", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
solana-program-test = "1.16"
solana-sdk = "1.16"
tokio = { version = "1.28", features = ["full"] }
